--- a/angular.json
+++ b/angular.json
@@ -97,8 +97,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d8bac95b-1adb-4a3f-b682-ba4a92276009"
   }
 }
